--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-41QEB752MG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-41QEB752MG');
+  </script>
   <body>
     <div class="full-page">
       <div class="hero">
