AA-24: Easy Fixes Iteration 2

--- a/index.html
+++ b/index.html
@@ -63,20 +63,16 @@
           </div>
         </div>
         <div class="logos" data-animate-on-scroll>
-          <a href="https://deepcore.jp/" target="_blank"><img
-            class="deepcore-white-icon"
-            alt=""
-            src="./public/deepcore-white@2x.png"
-          /></a>
-
-          <a href="https://www.minerva.edu/" target="_blank"><img class="mu-white-icon" alt="" src="./public/mu-white@2x.png" /></a>
-
-          <a href="https://masason-foundation.org/en/" target="_blank"><img
-            class="masason-foundation-logo-icon"
-            alt=""
-            src="./public/masason-foundation-logo@2x.png"
-          /></a>
-        </div>
+              <a href="https://deepcore.jp/" target="_blank" class="slide">
+                  <img class="deepcore-white-icon" alt="" src="./public/deepcore-white@2x.png" />
+              </a>
+              <a href="https://www.minerva.edu/" target="_blank" class="slide">
+                  <img class="mu-white-icon" alt="" src="./public/mu-white@2x.png" />
+              </a>
+              <a href="https://masason-foundation.org/en/" target="_blank" class="slide">
+                  <img class="masason-foundation-logo-icon" alt="" src="./public/masason-foundation-logo@2x.png" />
+              </a>
+          </div>        
         <img class="vector-icon" alt="" src="./public/vector.svg" />
 
         <img class="vector-icon1" alt="" src="./public/vector1.svg" />
@@ -484,7 +480,7 @@
         });
       });
     });
-
+  
 
     </script>
   </body>
