switch from free to paid Taita

--- a/index.html
+++ b/index.html
@@ -243,13 +243,14 @@
     </div>
 
     <div class="stages">
+      <h2 class="blue-title" style="color: #8600CE;">getting started</h2>
       <div class="stage-1-parent">
         <div class="stage-1" data-animate-on-scroll>
           <div class="frame-group">
             <img class="frame-group" alt="" src="./public/frame-39.svg" />
 
             <div class="stage-1-group">
-              <div class="stage-11">Stage 1</div>
+              <div class="stage-11">Step 1</div>
               <div class="start-your-ai-journey-by-signi-parent">
                 <div class="start-your-ai">
                   Start your AI journey by signing up for our waitlist. It's
@@ -272,7 +273,7 @@
             <img class="vector-icon5" alt="" src="./public/vector5.svg" />
           </div>
           <div class="stage-2-parent">
-            <div class="stage-21">Stage 2</div>
+            <div class="stage-21">Step 2</div>
             <div class="exploratory-call">exploratory call</div>
             <div class="upon-selection-well">
               Upon selection, we'll engage in a detailed discussion to explore
@@ -290,13 +291,12 @@
             </div>
           </div>
           <div class="stage-3-group">
-            <div class="stage-31">Stage 3</div>
-            <div class="custom-solution">custom solution</div>
+            <div class="stage-31">Step 3</div>
+            <div class="custom-solution">solution</div>
             <div class="following-our-deep-dive">
               Following our deep-dive, we'll devise a personalized AI solution
               proposal. Once we align on the proposal, we'll start building
-              your custom AI tool – usually ready within a week and at no cost
-              to you.
+              your customized AI tool.
             </div>
           </div>
         </div>
@@ -305,7 +305,7 @@
             <img class="vector-icon7" alt="" src="./public/vector7.svg" />
           </div>
           <div class="stage-4-parent">
-            <div class="stage-11">Stage 4</div>
+            <div class="stage-11">Step 4</div>
             <div class="well-put-your-new-ai-tool-to-parent">
               <div class="well-put-your">
                 We'll put your new AI tool to the test, refining it as needed
@@ -321,7 +321,7 @@
           <img class="vector-icon8" alt="" src="./public/vector8.svg" />
         </div>
         <div class="stage-5-parent">
-          <div class="stage-11">Stage 5</div>
+          <div class="stage-11">Step 5</div>
           <div class="once-your-ai-solution-is-refin-parent">
             <div class="once-your-ai">
               Once your AI solution is refined to perfection, we launch it,
@@ -372,7 +372,7 @@
     </div>
     <div class="faq" data-animate-on-scroll>
       <div class="headline">
-        <div class="short-headline">frequently asked questions</div>
+        <div class="blue-title">frequently asked questions</div>
       </div>
       <div class="list">
         <div class="list-1">
@@ -384,7 +384,7 @@
           <img class="arrow-icon" alt="" src="./public/arrow.svg" />
           <div class="title">Is my hiring data safe with you?</div>
           <div class="answer">Absolutely. At Taita, we prioritize your data's security. We store all data securely on
-            AWS, adhering to GDPR and data privacy laws. Moreover, we can remove your data at any time upon your
+            AWS, adhering to GDPR and data privacy laws. When we use models and APIs from third party providers, we ensure that your data is not used for training unless you explicitly consent. Moreover, we can remove your data at any time upon your
             request. Your data's safety is our top concern.</div>
           <div class="divider1"></div>
         </div>
@@ -396,22 +396,7 @@
           </div>
           <img class="arrow-icon" alt="" src="./public/arrow.svg" />
           <div class="title">How much does Taita cost?</div>
-          <div class="answer">Currently, as we are in our early stage, we are offering our services free of charge. We
-            are focused on helping you discover how AI can be used to automate HR workflows in your company. This will
-            help us understand your needs better and eventually develop a profitable model.</div>
-          <div class="divider1"></div>
-        </div>
-        <div class="list-1">
-          <div class="divider">
-            <div class="muted">
-              <div class="line"></div>
-            </div>
-          </div>
-          <img class="arrow-icon" alt="" src="./public/arrow.svg" />
-          <div class="title">How long does it take to implement the Taita solution?</div>
-          <div class="answer">Once we align on the proposal, our team typically builds your custom AI solution within
-            a
-            week. However, the exact time may vary depending on the complexity of the project.</div>
+          <div class="answer">We're in the early stages of our journey at Taita, and we want to bring you along. We're offering our services at a reduced cost to our first clients as we showcase the power of AI in applicant screening workflows. Don't miss out on the chance to be at the forefront of recruitment innovation for a fraction of the cost.</div>
           <div class="divider1"></div>
         </div>
         <div class="list-1">
@@ -422,9 +407,8 @@
           </div>
           <img class="arrow-icon" alt="" src="./public/arrow.svg" />
           <div class="title">How do I know if my company is a good fit for Taita's solutions?</div>
-          <div class="answer">If you're facing challenges in your hiring process and looking for ways to automate or
-            optimize workflows, you might be a great fit for Taita. Our solutions are designed for small and medium
-            businesses across various industries.</div>
+          <div class="answer">If you're facing challenges in your hiring or admissions and looking for ways to automate or
+            optimize workflows, you might be a great fit for Taita.</div>
           <div class="divider1"></div>
         </div>
         <div class="list-1">
@@ -435,10 +419,7 @@
           </div>
           <img class="arrow-icon" alt="" src="./public/arrow.svg" />
           <div class="title">What happens after I sign up for the waitlist?</div>
-          <div class="answer">Once you sign up for our waitlist, you'll be in line for selection. If selected, we'll
-            set
-            up a discovery call to understand your unique challenges and identify areas ripe for optimization. From
-            there, we'll propose a custom AI solution for your company.</div>
+          <div class="answer">Once you sign up, we'll reach out to discuss your challenges. If our existing tools address your needs, we'll start integrating them into your workflows. If you need a custom solution, you'll be placed on our waitlist. The duration of the wait depends on the complexity of your challenges, your hiring timeline, and the length of the waitlist. We always strive to deliver solutions in a timely manner, but it can vary based on these factors.</div>
           <div class="divider1"></div>
         </div>
         <div class="list-1">
@@ -450,10 +431,22 @@
           <img class="arrow-icon" alt="" src="./public/arrow.svg" />
           <div class="title">What kind of support can I expect from Taita during the process?</div>
           <div class="answer">Taita offers continuous support throughout the process. From the discovery call to the
-            launch of your custom AI tool, we'll be there to address any concerns and make adjustments as necessary.
-            After the launch, we'll continue to provide support to ensure your hiring process runs smoothly.</div>
+            launch of your AI-enhanced workflow, we'll be there to address any concerns and make adjustments as necessary.
+            After the launch, we'll continue to provide support to ensure your applicant screening process runs smoothly.</div>
           <div class="divider1"></div>
         </div>
+        <div class="list-1">
+          <div class="divider">
+            <div class="muted">
+              <div class="line"></div>
+            </div>
+          </div>
+          <img class="arrow-icon" alt="" src="./public/arrow.svg" />
+          <div class="title">What if I already use an ATS or some other recruitment/admissions software?</div>
+          <div class="answer">No problem at all! At Taita, we understand that your existing tools are important to your workflow. That's why we provide API integrations with existing services. Our solution is designed to enhance your existing recruitment pipeline, not to replace it. Whether you're using an ATS or another type of recruitment software, we can integrate our tools smoothly into your system to make your recruitment process even more efficient.</div>
+          <div class="divider1"></div>
+        </div>
+        
         <div class="list-1">
           <div class="divider">
             <div class="muted">
@@ -471,9 +464,9 @@
     </div>
     <div class="cta">
       <div class="ready-to-transform-your-hiring-parent" data-animate-on-scroll>
-        <div class="short-headline">
+        <h2 class="blue-title" style="color: white;">
           ready to transform your hiring with ai?
-        </div>
+        </h2>
         <div class="dont-wait-to">
           Don't wait to explore the transformative power of AI in your hiring
           process. Join our waitlist and let us help you discover how AI can
