--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       </div>
       <div class="column-3">
         <div class="menu1">
-          <div class="first-page"><a href="https://sites.google.com/uni.minerva.edu/autoprepprivacynotice/home.">Privacy
+          <div class="first-page"><a href="https://docs.google.com/document/d/e/2PACX-1vScdc6afm4Pztlu6DEpf7YSCShX5nhtk_ebffPe3ZqrNl1OI4bvaV8fGKzvLw_lzdHRGUmemLjmay17/pub">Privacy
               Policy</a></div>
           <div class="first-page">More to come!</div>
         </div>
